--- a/styles/theme.css
+++ b/styles/theme.css
@@ -6,6 +6,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: #2e3a5b;
+  margin: 0vh;
 }
 .bodydiv {
   width: 960px;
@@ -29,5 +30,5 @@ body {
 }
 a {
   text-decoration: none;
-  color:white;
+  color: white;
 }
