--- a/styles/index.css
+++ b/styles/index.css
@@ -58,8 +58,7 @@
   margin: 40px 0;
 }
 .contact {
-  padding-top: 20px;
-  font-size: 20px;
+  margin:20px 0;
 }
 .contact a {
   text-decoration: none;
